Dropdown is disabled by default
https://github.com/joereynolds/metronome/issues/7

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </select>
                 </div>
                 <div class="section">
-                    <select class="form-element repeat">
+                    <select class="form-element repeat" disabled>
                         <option value="1" selected>x1</option>
                         <option value="2">x2</option>
                         <option value="3">x3</option>
