--- a/index.html
+++ b/index.html
@@ -3,59 +3,89 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="spinner.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Metronome</title>
 </head>
 <body>
     <main class="box">
     <div class="wrapper">
-        <div class="label time-signature">
-            <select class="form-element label" id="note-type">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4" selected>4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-            </select>
-            <span class="separator">/</span>
-            <select class="form-element label" id="beat-type">
-                <option value="2">2</option>
-                <option value="4" selected>4</option>
-                <option value="8">8</option>
-                <option value="16">16</option>
-                <option value="32">32</option>
-            </select>
-            <span id="tempo-value">at 120 bpm</span>
+        <div class="tempo-counter-header">
+            <label class="button section tap label" id="tap-button">tap</label>
+            <div class="label tempo section">
+                Tempo: <span id="tempo-value">120 bpm</span>
+            </div>
+            <label id="beat-counter" class="section counter">0</label>
         </div>
-        <label id="beat-counter" class="label counter">1</label>
+        <div id="bars">
+            <div class="bar">
+                <label class="button section remove-bar disabled">X</label>
+                <div class="section time-signature">
+                    <select class="form-element label note-type">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4" selected>4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="24">24</option>
+                    </select>
+                    <span class="separator">/</span>
+                    <select class="form-element label beat-type">
+                      <option value="2">2</option>
+                      <option value="4" selected>4</option>
+                      <option value="8">8</option>
+                      <option value="16">16</option>
+                      <option value="32">32</option>
+                  </select>
+                </div>
+                <div class="section">
+                    <select class="form-element repeat" disabled>
+                        <option value="1" selected>x1</option>
+                        <option value="2">x2</option>
+                        <option value="3">x3</option>
+                        <option value="4">x4</option>
+                        <option value="5">x5</option>
+                        <option value="6">x6</option>
+                        <option value="7">x7</option>
+                        <option value="8">x8</option>
+                        <option value="9">x9</option>
+                    </select>
+                </div>
+                <label class="button section add-bar">+</label>
+            </div>
+        </div>
     </div>
 
     <input id="tempo" value="120" type="range" min="0" max="300" autocomplete="off">
 
-  <button class="button label" id="toggle-button">start</button>
-	<button class="button label" id="tap-button">Tap</button>
+  <label class="button label toggle" id="toggle-button">start</label>
 
     </main>
-
+    <main class="spinner">
+		<div class="wrapper">
+			<div class="pie spinner"></div>
+			<div class="pie filler"></div>
+			<div class="mask"></div>
+		</div>
+	</main>
     <section id="options" class="box hidden">
         <span id="close-options" class="btn-close">x</span>
         <h1>Options</h1>
